# vidtoolz-youtube-chapters

./: README.md  pyproject.toml
tests/: test_vidtoolz_youtube_chapters.py
vidtoolz_youtube_chapters/: __init__.py  youtubechapters.py
